Had a small issue with the timer shifting around when the countdown began, fixed that by generating the text for the timer on the fly via JS.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ footer{
 }
 
 /* ids */
-#timer-msg{
+#timer-box{
   display: flex;
   justify-content: center;
   flex-direction: column;
